2015-12-16 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Option added to specify a list of regions where to apply each syst. See option Regions under Systematic (also Exclude should work - to exclude both for regions and sample)
        * Added few optins for signal in plots (NOSIG, OVERSIG)

2015-12-11 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Command-line option "Signal" added: e.g.  ./myFit.exe  wl  config/myconfig.config  'Signal=signalA:Suffix=_A'
        * Fixed limit when having a suffix
        * MC stat uncertinaty in post-fit tables fixed

2015-12-10 Michele Pinamonti <michele.pinamonti@gmail.com>
        * ReferenceSample option fixed (relative overall normalization variation kept)
        * Image format propagated to syst plots, and now possible to specify more than one (e.g. eps,png)
        * PieChart plot fixed and moved to main output directory (as SignalRegions)
        
2015-12-06 Loic Valery <lvalery@cern.ch>
        * Improve tables by automating the script -> Still to be improved for the $$
        * Adding pie charts

2015-12-05 Loic Valery <lvalery@cern.ch>
        * Remove useless fits from the limits computation (when everything uses data, no need to fit to get an Asimov)
        * Fixing nans for the regions with 0 signal events bins 

2015-12-04 Loic Valery <lvalery@cern.ch>
        * Fixing the fully blinded limits to be compatible when no data sample is there
        * Adding the limit configuraiton in all the example config files

2015-12-03 Michele Pinamonti <michele.pinamonti@gmail.com>
        * ReferenceSample option added for systematics (to derive syst relativly to a given sample)
        * Type::GHOST added for Sample => sample not shown enywhere, but used for systs with ReferenceSample option
        
2015-12-03 Calvet Thomas <calvet@cppm.in2p3.fr>
	* Merging trunk with devbranch
	
2015-12-02 Michele Pinamonti <michele.pinamonti@gmail.com>