@@ -1,3 +1,8 @@
+2015-12-18 Michele Pinamonti <michele.pinamonti@gmail.com>
+        * Fixing signal draw options
+        * Updating documentation
+        * tex tables automatic creating added (by Marine)
+        
 2015-12-16 Michele Pinamonti <michele.pinamonti@gmail.com>
         * Option added to specify a list of regions where to apply each syst. See option Regions under Systematic (also Exclude should work - to exclude both for regions and sample)
         * Added few optins for signal in plots (NOSIG, OVERSIG)
